# pushworld-experiments

./: .gitignore  pushworld_level0_transformed_all.pkl  pyproject.toml  requirements-cluster.txt  setup_cluster.sh  submit_plr.sh
configs/: maze_plr.yaml  pushworld_plr.yaml  pushworld_plr_benchmark.yaml
configs/env/: maze.yaml  pushworld.yaml
configs/eval/: maze.yaml  pushworld.yaml
configs/learning/: ppo.yaml
configs/misc/: misc.yaml
configs/ued/: accel.yaml  plr.yaml
experiments/: maze_plr.py  pushworld_plr.py  pushworld_plr_benchmark.py  understand_pushworld_plr.ipynb
jaxued/environments/maze/: util.py
jaxued/environments/pushworld/: __init__.py  debug_push_mechanics.ipynb  env.py  env_editor.py  env_solved.py  level.py  renderer.py  test_interactive.py  util.py
jaxued/environments/pushworld/puzzles/: level_0_all_test_127_r0.pwp  level_0_all_test_131_r0.pwp  level_0_all_test_22_r0.pwp  level_0_all_test_23_r0.pwp  level_0_all_test_36_r0.pwp
scripts/: create_benchmark.py  upload_to_hf.py
