[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pushworld-experiments"
version = "0.1.0"
description = "PushWorld PLR experiments with JAX"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "flax",
    "chex",
    "gymnax",
    "distrax",
    "optax",
    "orbax-checkpoint",
    "wandb",
    "pillow",
    "imageio",
    "hydra-core",
    "omegaconf",
    "pygame",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipython",
    "moviepy",
]

[tool.setuptools.packages.find]
include = ["jaxued*"]
